--- a/templates/login.html
+++ b/templates/login.html
@@ -28,11 +28,11 @@
                         {% endfor %}
                         <div class="form-group">
                             <label for="email">Email</label>
-                            <input type="text" class="form-control form-control-sm" name="email" value="{{ data.email }}">
+                            <input type="text" class="form-control form-control-sm" name="email" value="{{ data.email }}" required>
                         </div>
                         <div class="form-group">
                             <label for="password">Contrasenya</label>
-                            <input type="password" class="form-control form-control-sm" name="password">
+                            <input type="password" class="form-control form-control-sm" name="password" required>
                         </div>
                         <button type="submit" class="btn btn-primary btn-block">Inicia sessió</button>
 
