--- a/Apps/gestio_cine/static/css/pagament.css
+++ b/Apps/gestio_cine/static/css/pagament.css
@@ -73,7 +73,7 @@ body {
     margin-top: 50px;
 }
 
-#Checkout {
+.checkout {
     z-index: 100001;
     width: 50%;
     min-width: 300px;
@@ -87,7 +87,7 @@ body {
     display: block;
 }
 
-#Checkout>h1 {
+.checkout>h1 {
     margin: 0;
     padding: 20px;
     text-align: center;
@@ -100,7 +100,7 @@ body {
     border-top-right-radius: 8px;
 }
 
-#Checkout>form {
+.checkout>form {
     margin: 0 25px 25px;
 }
 
