--- a/templates/formulari_pagament.html
+++ b/templates/formulari_pagament.html
@@ -15,12 +15,14 @@
     <title>Document</title>
     <link rel="stylesheet" href="{% static 'css/pagament.css' %}"/>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.8.0/html2pdf.bundle.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script defer src="{% static 'js/descarregarPDF.js' %}"></script>
 </head>
 
 <body>
     <div class="container">
-        <div id="Checkout" class="inline">
+        <div class="inline checkout">
             <h1>Pagament</h1>
             <div class="card-row">
                 <span class="visa"></span>
@@ -56,7 +58,7 @@
         </div>
     </div>
    <div class="container">
-        <div id="Checkout" class="inline">
+        <div id="resum" class="inline checkout">
             <h1>Resum de compra</h1>
             <div class="card-row">
 
@@ -72,6 +74,7 @@
                 </div>
             </form>
         </div>
+       <button id="download">Descarrega el ticket</button>
     </div>
 </body>
 
