--- a/templates/base_admin.html
+++ b/templates/base_admin.html
@@ -36,6 +36,7 @@
                 class="icon-text">Gestionar sessions</span></a><br>
         <a href="/llistat_comentaris"><i class="material-icons">message</i><span
                 class="icon-text">Gestionar comentaris</span></a>
+
     </div>
 
     <div id="main">
@@ -78,6 +79,7 @@
         </div>
         {#      Si l'usuari ha iniciat sessió, mostrem el seu nom d'usuari i l'enllaç per tancar la sessió#}
         {% if request.user.is_authenticated %}
+            <span class="material-icons">account_circle</span>
             <span class="nav-link">Hola, {{ request.user.username }}</span>
             <span id="logout"><a href="{% url 'logout' %}">Tancar Sessió</a></span>
         {% endif %}
