--- a/templates/productes.html
+++ b/templates/productes.html
@@ -28,9 +28,9 @@
                             <div class="card-body">
                                 <h5 class="card-title nom">{{ producte.nom }}</h5>
                                 <h5 class="card-title">{{ producte.preu }} €</h5>
-                                <button data-product="{{ producte.id_producte }}" data-action="add"
-                                        class="btn btn-outline-secondary add-btn js-add-product">Add to Cart
-                                </button>
+{#                                <button data-product="{{ producte.id_producte }}" data-action="add"#}
+{#                                        class="btn btn-outline-secondary add-btn js-add-product">Add to Cart#}
+{#                                </button>#}
                             </div>
                         {% endif %}
                     </div>
