--- a/templates/seleccio_butaques.html
+++ b/templates/seleccio_butaques.html
@@ -58,7 +58,7 @@
 
 {#                  Llavors dins del checkbox faig un for de les butaques que estan ocupade si comparo les #}
 {#                  ids per saber si estan ocupades. Si ho estan, poso disabled que ja agafa la class de css#}
-                    <input type="checkbox" name="butaca" id="{{ b.id_butaca }}" value="{{ b.id_butaca }}" hidden
+                    <input type="checkbox" name='butaca[]' id="{{ b.id_butaca }}" value="{{ b.id_butaca }}" hidden
 
                     {% for bo in butaques_ocupades %}
                         {% if b.id_butaca == bo.id_butaca %}
@@ -80,7 +80,7 @@
             {% for b in butaca %}
                 {% if b.num_butaca > 8 and b.num_butaca < 17 %}
 
-                    <input type="checkbox" name="butaca" id="{{ b.id_butaca }}" value="{{ b.id_butaca }}" hidden
+                    <input type="checkbox" name='butaca[]' id="{{ b.id_butaca }}" value="{{ b.id_butaca }}" hidden
 
                             {% for bo in butaques_ocupades %}
                                 {% if b.id_butaca == bo.id_butaca %}
@@ -102,7 +102,7 @@
             {% for b in butaca %}
                 {% if b.num_butaca > 16 and b.num_butaca < 25 %}
 
-                    <input type="checkbox" name="butaca" id="{{ b.id_butaca }}" value="{{ b.id_butaca }}" hidden
+                    <input type="checkbox" name='butaca[]' id="{{ b.id_butaca }}" value="{{ b.id_butaca }}" hidden
                     {% for bo in butaques_ocupades %}
                         {% if b.id_butaca == bo.id_butaca %}
                             disabled="disabled"
@@ -122,7 +122,7 @@
             {% for b in butaca %}
                 {% if b.num_butaca > 24 and b.num_butaca < 33 %}
 
-                    <input type="checkbox" name="butaca" id="{{ b.id_butaca }}" value="{{ b.id_butaca }}" hidden
+                    <input type="checkbox" name='butaca[]' id="{{ b.id_butaca }}" value="{{ b.id_butaca }}" hidden
                     {% for bo in butaques_ocupades %}
                         {% if b.id_butaca == bo.id_butaca %}
                             disabled="disabled"
@@ -142,7 +142,7 @@
             {% for b in butaca %}
                 {% if b.num_butaca > 32 and b.num_butaca < 41 %}
 
-                    <input type="checkbox" name="butaca" id="{{ b.id_butaca }}" value="{{ b.id_butaca }}" hidden
+                    <input type="checkbox" name='butaca[]' id="{{ b.id_butaca }}" value="{{ b.id_butaca }}" hidden
                     {% for bo in butaques_ocupades %}
                         {% if b.id_butaca == bo.id_butaca %}
                             disabled="disabled"
@@ -162,7 +162,7 @@
             {% for b in butaca %}
                 {% if b.num_butaca > 40 %}
 
-                    <input type="checkbox" name="butaca" id="{{ b.id_butaca }}" value="{{ b.id_butaca }}" hidden
+                    <input type="checkbox" name='butaca[]' id="{{ b.id_butaca }}" value="{{ b.id_butaca }}" hidden
                     {% for bo in butaques_ocupades %}
                         {% if b.id_butaca == bo.id_butaca %}
                             disabled="disabled"
