arreglar botó afegir per cada producte

--- a/templates/formulari_pagament.html
+++ b/templates/formulari_pagament.html
@@ -81,14 +81,14 @@
             <form id="form">
                 <div class="form-group">
                     <label for="preu-total">Preu</label>
-                    <input id="preu-total" class="null card-image form-control col-md-6" type="text" value="6.00€" disabled step=".01">
+                    <input id="preu-total" class="null card-image form-control col-md-6" type="text" value="{{ preu }}€" disabled step=".01">
                 </div>
-{#                {% for butaca in butaques %}#}
+                {% for b in butaca %}
                 <div class="form-group">
                     <label for="numSeient">Número de seient</label>
-                    <input class="null card-image form-control col-md-6" type="text" value="{{ butaca }}" disabled>
+                    <input class="null card-image form-control col-md-6" type="text" value="{{ b }}" disabled>
                 </div>
-{#                {% endfor %}#}
+                {% endfor %}
             </form>
         </div>
        <button id="download" class="btn btn-success submit-button">Descarrega el ticket</button>
