--- a/templates/formulari_pagament.html
+++ b/templates/formulari_pagament.html
@@ -65,7 +65,7 @@
                         <div class="visa-mc-dis-cvc-preview"></div>
                     </div>
                 </div>
-                <button id="PayButton" class="btn btn-block btn-success submit-button" type="submit">
+                <button a href="{% url 'cartellera' %}"  id="PayButton" class="btn btn-block btn-success submit-button" type="submit">
                     <span class="submit-button-lock"></span>
                     <span class="align-middle">Pagar</span>
                 </button>
