afegir sessions a totes les pel·lícules

--- a/templates/index.html
+++ b/templates/index.html
@@ -21,7 +21,7 @@
 
         <form method="get">
             <div class="form-group">
-                <label for="genere">Genere</label>
+                <label for="genere">Gènere</label>
                 {{ myFilter.form.id_genere }}
                 <button class="btn btn-primary" type="submit">Buscar</button>
             </div>
