--- a/templates/productes.html
+++ b/templates/productes.html
@@ -14,7 +14,7 @@
 
 {% block content %}
 
-    <h2 class="center">Productes</h2> <br>
+    <h2 class="center">El nostre menú</h2> <br>
 
     {#    fem un for per mostrar els productes que hi ha a la base de dades#}
 
