preparar deploy heroku

--- a/templates/formulari_pagament.html
+++ b/templates/formulari_pagament.html
@@ -35,8 +35,8 @@
         {% endfor %}
     </div>
     <br><br><br>
-
     <div class="container">
+        <a href="/">Tornar a la Cartellera</a>
         <div class="inline checkout">
             <h1>Pagament</h1>
             <div class="card-row">
@@ -65,7 +65,7 @@
                         <div class="visa-mc-dis-cvc-preview"></div>
                     </div>
                 </div>
-                <button a href="{% url 'cartellera' %}"  id="PayButton" class="btn btn-block btn-success submit-button" type="submit">
+                <button href="/" id="PayButton" class="btn btn-block btn-success submit-button" type="submit">
                     <span class="submit-button-lock"></span>
                     <span class="align-middle">Pagar</span>
                 </button>
