personalització pàgines d'error

--- a/templates/404.html
+++ b/templates/404.html
@@ -28,8 +28,8 @@
     </div>
 </div>
 <div class="message">
-    <h1>404 - No Pots Passar</h1>
-    <p>Sembla que no tens accés a aquesta pàgina!<br/>Si t'has equivocat, prova de posar una altra url.</p>
+    <h1>404 - Pàgina no trobada</h1>
+    <p>Sembla que la pàgina que busques no existeix!<br/>Si t'has equivocat, prova de posar una altra url.</p>
 </div>
 </body>
 </html>
